# NEXUS

./: .gitignore  Cargo.toml  E2E-FLOW.md  README copy.md  README.md
.github/workflows/: ci.yml
client-node/: Cargo.toml
client-node/config/: default.toml
client-node/src/: main.rs
data/: rustnano.sqlite3
docs/: diff.md
docs/superpowers/: 2026-03-30-m3-auth-db-e2e-plan.md  ACCEPTANCE.md  DEVICE-ROUTING.md  E2E-FLOW.md  ROADMAP.md
docs/superpowers/plans/: 2026-03-31-discord-channel.md  2026-03-31-openai-provider.md  2026-04-02-per-device-filesystem-policy.md  2026-04-03-embedding-config-and-reembed.md  2026-04-04-m3-completion-features.md  2026-04-05-m3-final-cleanup.md  2026-04-05-m4-gateway-frontend.md  2026-04-08-m1-common-client-plan.md  2026-04-09-m2a-foundation.md  2026-04-09-m2b-agent-core.md  2026-04-09-m2cd-channels-mcp.md
docs/superpowers/specs/: 2026-03-31-code-cleanup-spec.md  2026-03-31-discord-channel-design.md  2026-03-31-m3-cleanup-and-admin-api.md  2026-03-31-m3-final-three.md  2026-03-31-openai-provider-design.md  2026-04-02-m3-completion.md  2026-04-05-m4-gateway-frontend-design.md  2026-04-08-m1-common-client-design.md  2026-04-08-m5-security-design.md  2026-04-09-m2-server-design.md
nexus-client/: Cargo.toml  README.md
nexus-client/docs/: DECISIONS.md  DEPLOYMENT.md  SECURITY.md  TOOLS.md
nexus-client/src/: config.rs  connection.rs  discovery.rs  env.rs  executor.rs  guardrails.rs  heartbeat.rs  main.rs  mcp_client.rs  process.rs  sandbox.rs  session.rs  skills.rs
nexus-client/src/config/: loader.rs  mod.rs  schema.rs
nexus-client/src/mcp/: client.rs  mod.rs
nexus-client/src/tools/: edit.rs  edit_file.rs  fs.rs  fs_helpers.rs  glob.rs  grep.rs  helpers.rs  list_dir.rs  mod.rs  read_file.rs  shell.rs  stat.rs  write_file.rs
nexus-common/: Cargo.toml  README.md
nexus-common/src/: consts.rs  error.rs  lib.rs  mcp_utils.rs  mime.rs  protocol.rs
nexus-frontend/: README.md  vite.config.ts
nexus-frontend/docs/: DECISIONS.md  DEPLOYMENT.md
nexus-frontend/src/: App.tsx  index.css
nexus-frontend/src/components/: shared.tsx
nexus-frontend/src/lib/: api.ts  store.ts  useWebSocket.ts
nexus-frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  LoginPage.tsx  SettingsPage.tsx
nexus-gateway/: Cargo.toml  README.md
nexus-gateway/docs/: DECISIONS.md  DEPLOYMENT.md  PROTOCOL.md
nexus-gateway/src/: browser.rs  gateway.rs  main.rs  protocol.rs  proxy.rs  state.rs
nexus-server/: .env.example  Cargo.toml  README.md
nexus-server/docs/: API.md  DECISIONS.md  DEPLOYMENT.md  SCHEMA.md  SECURITY.md
nexus-server/src/: agent_loop.rs  api.rs  auth.rs  bus.rs  config.rs  context.rs  cron.rs  db.rs  file_store.rs  litellm.rs  main.rs  memory.rs  server_mcp.rs  session.rs  state.rs  tools_registry.rs  ws.rs
nexus-server/src/auth/: admin.rs  cron_api.rs  device.rs  discord_api.rs  discord_config.rs  mod.rs  skills_api.rs  telegram_api.rs
nexus-server/src/channels/: discord.rs  gateway.rs  mod.rs  telegram.rs  webui.rs
nexus-server/src/channels/discord/: gateway_conn.rs  mod.rs  protocol.rs  rest.rs
nexus-server/src/config/: loader.rs  mod.rs  schema.rs
nexus-server/src/db/: checkpoints.rs  cron.rs  devices.rs  discord.rs  memory.rs  messages.rs  mod.rs  sessions.rs  skills.rs  system_config.rs  telegram.rs  users.rs
nexus-server/src/providers/: mock.rs  mod.rs  openai.rs
nexus-server/src/server_tools/: cron.rs  cron_tool.rs  download_to_device.rs  file_transfer.rs  memory.rs  message.rs  mod.rs  send_file.rs  skills.rs  web_fetch.rs
nexus-webui/: Cargo.toml  README.md
nexus-webui/src/: gateway.rs  main.rs  main.ts  protocol.rs  state.rs
nexus-webui/src/api/: rest.ts  ws.ts
nexus-webui/src/router/: index.ts
nexus-webui/src/stores/: app.ts  user.ts
nexus-webui/src/views/: AdminView.vue  AuthView.vue  ChatView.vue  Settings.vue
records/2026-03-21/: ACCEPTANCE.md  ROADMAP.md  TASKS.md
records/2026-03-28/: DEVICE-ROUTING.md  M1-client-remaining.md  nexus-client-plan.md
server/: Cargo.toml  openapi.yaml  tool-roundtrip-57810.sqlite3
server/config/: default.toml
server/src/: lib.rs  main.rs
server/tests/: tool_roundtrip.rs
shared-protocol/: Cargo.toml
shared-protocol/src/: lib.rs
storage/: Cargo.toml
storage/src/: lib.rs
storage/tests/: tenant_isolation.rs
tests/: e2e_gateway.mjs  e2e_quick.mjs  e2e_webui_gateway.mjs
webui/: .env.example  .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
webui/src/api/: client.ts
webui/src/components/: NavBar.vue
webui/src/router/: index.ts
webui/src/stores/: auth.ts
webui/src/views/: AdminDashboardView.vue  LoginView.vue  SessionDetailView.vue  UserOverviewView.vue  UserSessionsView.vue  UserUsageView.vue
