[workspace]
members = ["server", "client-node", "shared-protocol", "storage"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
uuid = { version = "1.18.1", features = ["v4"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
axum = { version = "0.8.4", features = ["http1", "json", "tokio", "ws"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
postgres = "0.19.12"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
toml = "0.8.19"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
