[package]
name = "nexus-client"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-common = { path = "../nexus-common" }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
thiserror = "2"
regex = "1"
url = "2"
tokio-stream = { version = "0.1", features = ["fs"] }
chrono = { version = "0.4", features = ["std"] }
