[package]
name = "nexus-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexus-gateway"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
dashmap = "5"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
subtle = "2"
