[package]
name = "nexus-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-common = { path = "../nexus-common" }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5"
tokio-tungstenite = "0.24"
bcrypt = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1"
