[package]
name = "nexus-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-common = { path = "../nexus-common", features = ["axum"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
bcrypt = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
tokio-util = { version = "0.7", features = ["rt"] }
regex = "1"
rmcp = { version = "1", features = ["client", "transport-child-process"] }
cron = "0.15"
url = "2"
