[package]
name = "nexus-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nexus-common = { path = "../nexus-common", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-none", "postgres", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
jsonwebtoken = "9"
bcrypt = "0.17"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
