[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
uuid.workspace = true
argon2.workspace = true
axum.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64 = "0.22.1"
cookie = "0.18.1"
subtle = "2.6.1"
tower-http = { version = "0.6.6", features = ["fs"] }
shared-protocol = { path = "../shared-protocol" }
storage = { path = "../storage" }
